src/sass/base/_base.scss
// css for base components 

/* normalize css */
*,
*::after,
*::before {
  margin: 0;
  padding: 0px;
  box-sizing: border-box;
}
html {
  font-size: 62.5%; //1rem =10 px; 10px/16px * 100% = 62.5%

  @include respond(small-desktop) {
    font-size: 58%; //1 rem = 12px;
  }

  @include respond(tab-land) {
    font-size: 56.25%; //1 rem = 9px;
  }

  @include respond(tab-port) {
    font-size: 50%; //1 rem = 8px;
  }

  @include respond(big-desktop) {
    font-size: 75%; //1 rem = 12px;
  }
}
body {
  background-color: #f1f0fb;
  // $color-grey-light;
  box-sizing: border-box;
  padding: 0;
  font-family: DM Sans;
}

// for text selection
::selection {
  color: $color-primary;
  background-color: $color-primary-light;
}



.wrapper {
  display: flex;
    justify-content: space-between;
    align-items: flex-start;
  position: relative;
  transition: all 0.3s ease;
  overflow-x: hidden;
  &__body{
    position: relative;
    width: calc(100vw - 10rem);
    height: 100vh;
    padding: 1.5rem 2.5rem;
  }

  button{
    background-color: #f1f0fb;
    border-radius: 8px;
    font-size: 1.6rem;
    line-height: 2.1rem;
    color: $color-primary;
    display: flex;
    align-content: center;
    text-transform: uppercase;
    padding: 0.5rem 1rem;
    border: none;
    box-shadow: 5px 5px 8px #cdccd5, -5px -5px 8px  #ffffff;
    &:hover{
      box-shadow: -5px -5px 8px #cdccd5, 5px 5px 8px #ffffff;
    }

    &:active{
      box-shadow: inset 5px 5px 10px #cdccd58c, inset -5px -5px 10px #ffffffbd;
    }
  }

}

